WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233577
[JSC] private name operation should use RETURN_IF_EXCEPTION
https://bugs.webkit.org/show_bug.cgi?id=233577
Summary
[JSC] private name operation should use RETURN_IF_EXCEPTION
Yusuke Suzuki
Reported
2021-11-29 10:51:12 PST
[JSC] private name operation should use RETURN_IF_EXCEPTION
Attachments
Patch
(4.79 KB, patch)
2021-11-29 10:52 PST
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-11-29 10:52:19 PST
Created
attachment 445299
[details]
Patch
Yusuke Suzuki
Comment 2
2021-11-29 10:52:25 PST
<
rdar://problem/85813869
>
Mark Lam
Comment 3
2021-11-29 11:01:24 PST
Comment on
attachment 445299
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2021-11-29 11:56:12 PST
Committed
r286249
(
244612@main
): <
https://commits.webkit.org/244612@main
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug